# drf_open_api_validator

./: .coveragerc  Pipfile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
drf_open_api_validator/: helpers.py  middleware.py
drf_open_api_validator/core/: exceptions.py  loaders.py  operation.py  path_encoders.py
tests/: openapi.yaml  settings.py  spec.yml  test_middleware.py  test_operations.py
