[metadata]
name = drf-open-api-valiidator
version = 0.1.0
description = YAML parser that environment variable is expanded
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
	 Django
	 OpenAPI
license = MIT License
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

author = Hokan Inc
author_email = developer@hokan.jp

maintainer = Hokan Inc
maintainer_email = developer@hokan.jp

[options]
python_requires = >=3.6
packages = drf_open_api_validator
zip_safe = False
include_package_data = True

install_requires =
    django
    openapi_core

[options.extras_require]
testing =
	djangorestframework
	flake8
	pytest
	pytest-django
	tox

packaging =
	  build
	  setuptools
	  twine
	  wheel
